--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Steven Lin | Courses</title>
+		<title>Steven Lin | d3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -43,39 +43,16 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Courses</h2>
-							<p>Courses in machine learning, computer science, web design and big data</p>
+							<h2>D3.js</h2>
+							<p>Visualizations with Javascript library d3</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Northwestern University</h3>
-                                <ul>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_big_data">Big Data</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_deep_learning">Deep Learning</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_text_analytics">Text Analytics</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_data_mining">Data Mining</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_predictive_analytics">Predictive Analytics</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_statistical_methods">Statistical Methods</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_visualization">Visualization</a></li>
-                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_analytics_competitive_advantage">Analytics for Competitive Advantage</a></li>
-                                </ul>
-
-								<hr />
-
-								<h3>University of Illinois at Urbana-Champaign</h3>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/uiuc_regression_analysis">Regression Analysis</a></li>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/uiuc_statistical_computing">Statistical Computing</a></li>
-
-                                <hr />
 
                                 <h3>Coursera, edX and Udacity</h3>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_analytics_edge">edx - MIT: Analytics Edge</a></li>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_HTML_CSS_JavaScript">edx - Microsoft: Intro HTML, CSS and JavaScript</a></li>
-                                <li> <a href="edx_mit_intro_computer_science_and_programming">edx - MIT: Intro to Computer Science and Programming</a></li>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_berkeley_big_data_with_spark">edx - Berkeley: Big Data with Spark</a></li>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_berkeley_scalable_machine_learning">edx - Berkeley: Scalable Machine Learning</a></li>
-                                <li> <a href="https://github.com/linshiu/courses/tree/master/udacity_technical_interview">udacity - Technical Interview</a></li>
+                                <li> <a href="airports/">edx - MIT: Analytics Edge</a></li>
+                       
 							</div>
 						</section>
 					</article>
