--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
                                 <h3>Coursera, edX and Udacity</h3>
-                                <li> <a href="airports/">edx - MIT: Analytics Edge</a></li>
+                                <li> <a href="airports/index.html">edx - MIT: Analytics Edge</a></li>
                        
 							</div>
 						</section>
