--- a/index.html
+++ b/index.html
@@ -48,10 +48,20 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
-
-                                <h3>Coursera, edX and Udacity</h3>
-                                <li> <a href="airports/index.html">edx - MIT: Analytics Edge</a></li>
+                                
+                                <section class="tiles">
+                                    <article class="style2">
+                                        <span class="image">
+                                            <img src="/images/airports.jpg" alt="" />
+                                        </span>
+                                        <a href="airports/"> <!-- this is link to gh-pages repository...can use / or no / -->
+                                            <h2>Airport Connections</h2>
+                                            <div class="content">
+                                                <p>Visualization of airports and flights data in US</p>
+                                            </div>
+                                        </a>
+                                    </article>
+                                </section>
                        
 							</div>
 						</section>
