--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                                             <li><a href="/index.html#one">Projects</a></li>
                                             <li><a href="/courses.html">Courses</a></li>
 											<li><a href="https://github.com/linshiu/scripts">Scripts</a></li>
+											<li><a href="/d3/">D3.js</a></li>
                                             <li><a href="/index.html#cta">About Me</a></li>
 										</ul>
 									</div>
